finished the Blog v1.0

--- a/_posts/2020-02-04-js-test.md
+++ b/_posts/2020-02-04-js-test.md
@@ -1,20 +1,23 @@
 ---
 layout:     post
-title:      "testtesttest"
-subtitle:   "ES5, ES6, ES2016, ES.Next: What's going on with JavaScript versioning?"
-date:       2015-09-22
-author:     "zzc"
+title:      "How to install github page + jekyll"
+subtitle:   "During the WuHan virus period, I learned hwo to build a blog and try to make it perfect."
+date:       2020-02-04
+author:     "Vitae"
 header-img: "img/post-bg-js-version.jpg"
 tags:
-    - 前端开发
-    - JavaScript
-    - 翻译
+    - test
+    - Development
 ---
-
+## install the develop environment
 - install the ruby and devkit
 - then change the gem source<https://gems.ruby-china.com/>
 - gem install bundler
 - bundle install
 - bundle update
-- gem install jekyll
-  - 如果不行，不可以运行的话, 写bundle exec jekyll serve
+- gem install jekyll. if it does work, change to bundle exec jekyll serve.
+  
+## Image
+There are some pictures which need to change later.
+- ABOUT: The image location in about.html (line 5)
+
