--- a/_posts/2020-02-04-js-test.md
+++ b/_posts/2020-02-04-js-test.md
@@ -6,10 +6,11 @@ date:       2020-02-04
 author:     "Vitae"
 header-img: "img/post-bg-js-version.jpg"
 tags:
-    - test
-    - Development
+    - Environment
+    - Blog
+    - CS
 ---
-## install the develop environment
+## Install the develop environment
 - install the ruby and devkit
 - then change the gem source<https://gems.ruby-china.com/>
 - gem install bundler
