--- a/_posts/2020-02-04-js-test.md
+++ b/_posts/2020-02-04-js-test.md
@@ -12,7 +12,7 @@ tags:
 ---
 ## Install the develop environment
 - install the ruby and devkit
-- then change the gem source<https://gems.ruby-china.com/>
+- then change the [gem source](https://gems.ruby-china.com/)
 - gem install bundler
 - bundle install
 - bundle update
