Update the pages.

--- a/_posts/2020-02-04-js-test.md
+++ b/_posts/2020-02-04-js-test.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      "How to install github page + jekyll"
-subtitle:   "During the WuHan virus period, I learned hwo to build a blog and try to make it perfect."
+subtitle:   "During the WuHan virus period, I learned how to build a blog and try to make it perfect."
 date:       2020-02-04
 author:     "Vitae"
 header-img: "img/post-bg-js-version.jpg"
