--- a/_posts/2021-10-21-My Pets.md
+++ b/_posts/2021-10-21-My Pets.md
@@ -4,9 +4,15 @@ title:      "My pets"
 subtitle:   "Share some pictures with you."
 date:       2021-10-21
 author:     "Vitae"
-header-img: "img/in-post/2020-02-04-jekyllInstalltion/post-bg-js-version.jpg"
+header-img: "img/in-post/2021-10-21-Mypets/post-bg-2015.jpg"
 tags:
     - Germany
     - Blog
     - EFAF
 ---
+
+<img src="https://github.com/505788057/505788057.github.io/blob/master/img/in-post/2021-10-21-My%20pets/pet2.JPG?raw=true" alt="pet1" style="zoom:50%;" />
+
+
+
+<img src="https://github.com/505788057/505788057.github.io/blob/master/img/in-post/2021-10-21-My%20pets/pet1.JPG?raw=true" alt="pet1.JPG" style="zoom:55%;" />
